# ztlp

./: .dockerignore  .gitignore  ADVANCED-CC-TASK.md  AGENT-DESIGN.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  FEATURE-USER-IDENTITY.md  GAP-ANALYSIS.md  GETTING-STARTED.md  HANDSHAKE-RETRANSMIT-TASK.md  IDENTITY-AND-GROUPS-TASK.md  LICENSE  NOTICE  NS-SECURITY-HARDENING.md  PERF-PLAN.md  PROTOTYPE.md  README.md  ROADMAP.md  SECURITY.md  SPEC-PEER-DISCOVERY.md  STRESS-TEST-REPORT.md  TLS-TERMINATION.md  TODO.md  TUNING-LOG.md  ZTLP-IOS-DUPLICATE-CLOSESTREAM-HANDOFF-2026-04-29.md  ZTLP-IOS-NEBULA-STYLE-UTUN-FD-ARCHITECTURE-2026-04-29.md  ZTLP-IOS-NEXT-FOCUS-STUCK-FLOW-CLEANUP-2026-04-29.md  ZTLP-IOS-OPENVAULT-HANDOFF-2026-04-29-RWND12-NEXT.md  ZTLP-IOS-OPENVAULT-HANDOFF-2026-04-29.md  ZTLP-IOS-PERFORMANCE-RECOVERY-HANDOFF-2026-04-29.md  ZTLP-IOS-RESTART-HANDOFF-2026-04-28.md  ZTLP-IOS-RUST-FD-DATAPLANE-VALIDATION-2026-04-29.md  ZTLP-IOS-RUST-FD-NEXT-SESSION-PLAN-2026-04-29.md  ZTLP-IOS-RUST-FD-OUTBOUND-UTUN-HANDOFF-2026-04-29.md  (+19 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  desktop-build.yml  release.yml
.hermes/plans/: 2026-04-08_025000-ztlp-11-of-11-benchmark-plan.md  2026-04-08_ios-memory-strategy.md  2026-04-08_session-handoff.md  2026-04-08_session2-handoff.md  2026-04-12-browser-tunnel-crash-handoff.md  2026-04-12-decrypt-rc99-fix-plan.md  2026-04-12-followup-mobile-rto-session.md  2026-04-12-ios-handshake-memory-handoff.md  2026-04-12-manual-log-send-and-ne-throttle-handoff.md  2026-04-12-mobile-rto-fix-plan.md  (+2 more)
bench/: README.md  RESULTS.md  THROUGHPUT.md  perf-gate.sh  run_all.sh  run_new_features.sh  run_throughput.sh
bootstrap/: .dockerignore  .env.example  .gitignore  Dockerfile  Gemfile  README.md  docker-compose.yml
demo/: README.md  full-stack-demo.sh  ssh-tunnel-demo.sh  tunnel-stress-test.sh
deploy/: FIREWALL.md  README.md  http-echo.py  http-echo.service
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  main.rs  state.rs  tray.rs  tunnel.rs
docs/: ADVANCED-CC-TASK.md  AGENT-DESIGN.md  ARCHITECTURE.md  CLI-REF.md  CLIENT-TYPE-DETECTION-PLAN.md  CLIENT-TYPE-DETECTION.md  CREDENTIAL-RENEWAL.md  DOCKER.md  FEATURE-USER-IDENTITY.md  FIREWALL.md  GETTING-STARTED.md  GO-SDK.md  GOOD-FIRST-ISSUES.md  HANDSHAKE-RETRANSMIT-TASK.md  IDENTITY-HEADERS.md  IDENTITY.md  INDEX.md  INTERNAL-CA.md  IOS-DRIFT-ANALYSIS.md  IOS-LOGGING-MEMORY-AUDIT-2026-04-13.md  IOS-MEMORY-OPTIMIZATION.md  IOS-RELAY-ARCHITECTURE.md  IOS-RELAY-VIP-IMPLEMENTATION-CHECKLIST.md  IOS-SESSION3-STATUS.md  IOS-SESSION4-STATUS.md  IOS-SESSION5-PLAN.md  IOS-SESSION5-STATUS.md  IOS-SESSION5B-STATUS.md  IOS-SESSION5C-STATUS.md  IOS-VAULTWARDEN-CAPTURE-RUNBOOK.md  IOS-VAULTWARDEN-NEXT-BUILD-PLAN-2026-05-03.md  IOS-VAULTWARDEN-RUST-FD-HANDOFF-2026-05-03.md  KEY-MANAGEMENT.md  LINUX-NE-SIMULATION-PLAN.md  MONOTONIC-DATA-SEQ.md  MTLS-SETUP.md  NEBULA-ANALYSIS.md  NS-SECURITY-HARDENING.md  OPS-RUNBOOK.md  PASSWORDLESS.md  (+27 more)
ebpf/: Makefile  README.md  loader.c  ztlp_xdp.c  ztlp_xdp.h
examples/: README.md
fullstack/: Dockerfile.backend  Dockerfile.client  Dockerfile.server  README.md  backend-entrypoint.sh  client-entrypoint.sh  http-echo.py  server-entrypoint.sh
gateway/: Dockerfile  README.md  mix.exs
interop/: README.md  gateway_test_server.exs  handshake_server.exs  ns_test_server.exs  orchestrate.py  orchestrate_full.py  pipeline_server.exs  relay_server.exs  run_full_test.sh  run_test.sh
ios/: ARCHITECTURE-VIP.md  BUILD-GUIDE.md  README.md  build-ios.sh
macos/: README.md
ns/: .dockerignore  Dockerfile  README.md  mix.exs
ns/config/: dev.exs  (+4 more)
ops/: README.md
proto/: .dockerignore  Cargo.toml  Dockerfile  README.md  TRANSPORT.md  build-android.sh  build-ios.sh
proto/.cargo/: config.toml
proto/examples/: policy.toml
proto/fuzz/: Cargo.toml  README.md
proto/fuzz/fuzz_targets/: fuzz_handshake.rs  fuzz_nack_ack_decoding.rs  fuzz_packet_parsing.rs  fuzz_pipeline_admission.rs  fuzz_rat_parsing.rs  fuzz_reassembly.rs
proto/include/: ztlp.h
proto/src/: ack_socket.rs  admission.rs  android.rs  anti_replay.rs  batch.rs  client_profile.rs  congestion.rs  dns.rs  enrollment.rs  error.rs  fec.rs  ffi.rs  gro_batch.rs  gso.rs  handshake.rs  identity.rs  ios_tunnel_engine.rs  lib.rs  metrics.rs  mobile.rs  mux.rs  nat.rs  ns_cbor.rs  ns_cbor_tests.rs  pacing.rs  packet.rs  packet_router.rs  pipeline.rs  pmtu.rs  policy.rs  pqkem.rs  punch.rs  reject.rs  rekey.rs  relay.rs  relay_pool.rs  roaming.rs  security.rs  send_controller.rs  session.rs  (+7 more)
proto/src/agent/: ca_trust.rs  cert_install.rs  config.rs  control.rs  daemon.rs  discovery.rs  dns.rs  dns_setup.rs  domain_map.rs  hardware_key.rs  local_tls.rs  mod.rs  proxy.rs  renewal.rs  stream.rs  tunnel_pool.rs  vip_pool.rs
proto/tests/: ack_socket_contention_tests.rs  android_test.rs  edge_case_tests.rs  fake_ns_test.rs  fec_test.rs  handshake_tests.rs  integration_tests.rs  ios_tunnel_engine_harness.rs  metrics_test.rs  packet_tests.rs  perf_gate.rs  pin_test.rs  pipeline_tests.rs  pmtud_test.rs  pqkem_test.rs  punch_tests.rs  recovery_tests.rs  relay_pool_tests.rs  relay_tests.rs  stress_test.rs  throughput_tests.rs  updater_test.rs  vip_keepalive_test.rs
rel/: build-release.sh
relay/: .gitignore  Dockerfile  README.md  mesh_bench.exs  mesh_demo.exs  mix.exs
scripts/: build-ios.sh  ios-syslog-capture.sh  pull-ios-logs.sh  ztlp-ios-vault-capture.sh  ztlp-server-preflight.sh
sdk/: README.md
stress/: Dockerfile.impairment  Dockerfile.stresstest  README.md  docker-compose.yml  impairment-entrypoint.sh  impairment-proxy.py  run-stress-tests.sh  stress-client-entrypoint.sh
tests/: README.md
tools/: README.md  deploy-relay-vip.sh  log-receiver.py  stress-test.sh
whitepaper/: DEMO-SCRIPT.md  REAL-WORLD-EXAMPLES.md  ZTLP-Whitepaper.md  index.html
(+827 files in other folders)
