[package]
name = "ztlp-proto"
version = "0.24.0"
edition = "2021"
description = "ZTLP (Zero Trust Layer Protocol) Phase 1 prototype — handshake, session, encrypted transport"
license = "MIT"

[lib]
name = "ztlp_proto"
crate-type = ["lib", "staticlib"]

# Note: C header is manually maintained at include/ztlp.h
# To regenerate from Rust source, install cbindgen and run:
#   cbindgen --config cbindgen.toml --output include/ztlp.h

[features]
default = ["tokio-runtime"]
tokio-runtime = [
    "dep:tokio",
    "dep:tokio-rustls",
    "dep:clap",
    "dep:colored",
    "dep:indicatif",
    "dep:dialoguer",
    "dep:hostname",
    "dep:qr2term",
    "dep:dirs",
]
ios-sync = []  # Builds without tokio — for iOS Network Extension

[dependencies]
# --- Always included (sync core + crypto) ---
snow = "0.9"
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
blake2 = "0.10"
subtle = "2.6"
toml = "0.8"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std"] }
curve25519-dalek = "4"
libc = "0.2"
rustls-pemfile = "2"
ciborium = "0.2"

# --- Optional: tokio runtime + CLI deps (not needed for iOS NE) ---
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "io-std", "signal", "macros", "process"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }
dialoguer = { version = "0.11", features = ["password"], optional = true }
hostname = { version = "0.4", optional = true }
qr2term = { version = "0.3", optional = true }
dirs = { version = "5", optional = true }

[profile.release]
# Default: optimize for speed on desktop/server platforms.
# LTO gives good dead-code elimination without sacrificing speed.
lto = true
codegen-units = 1
strip = true
opt-level = 3      # optimize for speed (default for desktop/server)
# panic = "unwind" is the default — allows catch_unwind and RAII cleanup

[[bin]]
name = "ztlp-node"
path = "src/bin/ztlp-node.rs"

[[bin]]
name = "ztlp-demo"
path = "src/bin/ztlp-demo.rs"

[[bin]]
name = "ztlp-relay-demo"
path = "src/bin/ztlp-relay-demo.rs"

[[bin]]
name = "ztlp-bench"
path = "src/bin/ztlp-bench.rs"

[[bin]]
name = "ztlp"
path = "src/bin/ztlp-cli.rs"

[[bin]]
name = "ztlp-inspect"
path = "src/bin/ztlp-inspect.rs"

[[bin]]
name = "ztlp-load"
path = "src/bin/ztlp-load.rs"

[[bin]]
name = "ztlp-fuzz"
path = "src/bin/ztlp-fuzz.rs"

[[bin]]
name = "ztlp-handshake-interop"
path = "src/bin/ztlp-handshake-interop.rs"

[[bin]]
name = "ztlp-pipeline-interop"
path = "src/bin/ztlp-pipeline-interop.rs"

[[bin]]
name = "ztlp-ns-interop"
path = "src/bin/ztlp-ns-interop.rs"

[[bin]]
name = "ztlp-gateway-e2e"
path = "src/bin/ztlp-gateway-e2e.rs"

[[bin]]
name = "ztlp-edge-cases"
path = "src/bin/ztlp-edge-cases.rs"

[[bin]]
name = "ztlp-rat-interop"
path = "src/bin/ztlp-rat-interop.rs"

[[bin]]
name = "ztlp-throughput"
path = "src/bin/ztlp-throughput.rs"
